--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,9 @@
 .dashboard,
 .user,
 .employee,
-.about {
+.about,
+.logout {
   display: flex;
-  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
 }
