--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -38,13 +38,14 @@ body{
     display: flex;
     justify-content: center;
 }
-
+/* 
 .login-rigth img {
-    width: 80%;
-}
+    width: 100%;
+} */
 
 .login-header{
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 60px;
 }
 
 .login-header h1{
@@ -100,6 +101,11 @@ input[type='checkbox']{
     accent-color: var(--primary-color);
 }
 
+.redirect { 
+    text-align: center;
+    text-decoration: none;
+}
+
 button{
     border: none;
     background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
@@ -110,6 +116,7 @@ button{
     text-transform: uppercase;
     font-size: 18px;
     height: 55px;
+    margin-top: 0.1px;
     cursor: pointer;
 }
 
