--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #060b26;
+    background-color: #1a266d;
     height: 80px;
     display: flex;
     justify-content: flex-start;
@@ -7,14 +7,14 @@
 }
   
 .menu-bars {
-    margin-left: 2rem;
+    margin-left: 1rem;
     font-size: 2rem;
     background: none;
 }
   
 .nav-menu {
     background-color: #060b26;
-    width: 300px;
+    width: 228px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -33,9 +33,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 8px 0px 8px 16px;
+    padding: 8px 0px 8px 2px;
     list-style: none;
-    height: 60px;
+    height: 70px;
 }
   
 .nav-text a {
